# achilles

./: .gitignore  README.md  pyproject.toml
achilles/: SA1_controls.csv  SA2_controls.csv  SA3_controls.csv  SA4_controls.csv  generate_geo_cross_walk.py  generate_popsim_seeds.py  generate_total_sa1.py  generate_total_sa2.py  generate_total_sa3.py  generate_total_sa4.py  geo_cross_walk.csv  h_test_seed.csv  p_test_seed.csv  test.py
achilles/data/: SA2_controls.csv  SA3_controls.csv  SA4_controls.csv  STATE_all_control.csv  h_test_seed.csv  p_test_seed.csv
achilles/data/generator/: combine_generate.py  extra_steps.py  generate_geo_cross_walk.py  generate_popsim_seeds.py  test2.py
achilles/data_popsim/generator/: combine_generate.py  extra_steps.py  generate_geo_cross_walk.py  generate_popsim_seeds.py  generate_totals.py  test.py
achilles/data_popsim/generator/gis_test/: h_test_seed.csv  sa1.py  sa2.py  sa3.py  sa4.py
popsim/: data_process.py  generate_geo_cross_walk.py
popsim/configs/: controls.csv  settings.yaml
popsim/reweighting/configs/: controls.csv  settings.yaml
popsim/synthesis/: note_err.md
popsim/synthesis/configs/: controls.csv  controls_all.csv  controls_enough.csv  controls_simple.csv  settings.yaml
validation/: README.md  melbourne.yaml  validation.ipynb
validation/custom/: utils.py
