[tool.poetry]
name = "achilles"
version = "0.1.0"
description = "This project is set up to adapt Popsim and Activitysim with Melbourne data"
authors = ["cptnemo2005 <kytringuyen95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
