[tool.poetry]
name = "achilles"
version = "0.1.0"
description = "This project is set up to adapt Popsim and Activitysim with Melbourne data"
authors = ["cptnemo2005 <kytringuyen95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
pendulum = "^2.1.2"
click = "^8.1.3"
pandas = "^1.4.3"
numpy = "^1.23.0"
populationsim = "^0.5.1"
wheel = "^0.37.1"
pipwin = "^0.5.2"
Shapely = "^1.8.4"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
generate-popsim-seeds = "achilles.generate_popsim_seeds:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"